JB Plugin: Define KsonLanguage and KsonFileType
Set the foundation of our JetBrains support by defining our language
and file type (along with a file icon)

--- a/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
+++ b/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
@@ -19,6 +19,11 @@
     ]]></description>
 
     <extensions defaultExtensionNs="com.intellij">
+        <fileType name="Kson"
+                  implementationClass="org.kson.jetbrains.file.KsonFileType"
+                  fieldName="INSTANCE"
+                  language="org.kson.jetbrains"
+                  extensions="kson"/>
         <applicationService serviceImplementation="org.kson.jetbrains.services.MyApplicationService"/>
         <projectService serviceImplementation="org.kson.jetbrains.services.MyProjectService"/>
     </extensions>
