--- a/tooling/jetbrains/src/main/resources/messages/KsonBundle.properties
+++ b/tooling/jetbrains/src/main/resources/messages/KsonBundle.properties
@@ -1,3 +1,5 @@
-name=My Plugin
+name=Kson
 applicationService=Application service
 projectService=Project service: {0}
+
+kson.file.fileTypeDescription=Kson language file
