JB Plugin: syntax highlights and color page
Associate our lexed tokens with appropriate default editor colors and
implement a `ColorSettingsPage` to allow the user to customize our
default scheme

--- a/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
+++ b/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
@@ -27,6 +27,10 @@
 
         <lang.parserDefinition language="org.kson.jetbrains"
                                implementationClass="org.kson.jetbrains.parser.KsonParserDefinition"/>
+        <lang.syntaxHighlighterFactory language="org.kson.jetbrains"
+                                       implementationClass="org.kson.jetbrains.highlighter.KsonSyntaxHighlighterFactory"/>
+
+        <colorSettingsPage implementation="org.kson.jetbrains.pages.KsonColorSettingsPage"/>
 
         <applicationService serviceImplementation="org.kson.jetbrains.services.MyApplicationService"/>
         <projectService serviceImplementation="org.kson.jetbrains.services.MyProjectService"/>
