Circleci fix: ensure apt knows its packages
Suddenly getting the following error on Circleci:

 ```
 Reading package lists... Done
 Building dependency tree... Done
 Reading state information... Done
 E: Unable to locate package libncurses5
 ```

 So trying the solution from here: https://support.circleci.com/hc/en-us/articles/4417233334555--Unable-to-locate-package-when-running-apt-install
 (Run `sudo apt update` before `sudo apt install`)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,7 @@ jobs:
             - v1-dependencies-
 
       # installed needed native dependency on Linux
+      - run: sudo apt update
       - run: sudo apt install libncurses5
       - run: ./gradlew dependencies
 
