Implement PairedBraceMatcher for Kson
Tell the IDE about our brackets `{}` and our braces `[]` by implementing
`KsonPairedBraceMatcher`.  This enables:

* auto-insert of close bracket/brace
* highlighting of matching brackets/braces in a Kson document

--- a/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
+++ b/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,7 @@
         <lang.syntaxHighlighterFactory language="org.kson.jetbrains"
                                        implementationClass="org.kson.jetbrains.highlighter.KsonSyntaxHighlighterFactory"/>
         <lang.commenter language="org.kson.jetbrains" implementationClass="org.kson.jetbrains.editor.KsonCommenter"/>
+        <lang.braceMatcher language="org.kson.jetbrains" implementationClass="org.kson.jetbrains.editor.KsonPairedBraceMatcher"/>
 
         <colorSettingsPage implementation="org.kson.jetbrains.pages.KsonColorSettingsPage"/>
     </extensions>
