--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,9 @@ jobs:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      # Choose the `-browsers variant` of the openjdk 11 image, see https://circleci.com/developer/images/image/cimg/openjdk#browsers
-      # for details
-      - image: cimg/openjdk:11.0-browsers
+      # Choose the `node:lts-browsers` image so that we can install Chrome for testing.  Note that we
+      # do not install a JDK image so that we are always exercising the project's built-in JDK (see jdk.properties for details)
+      - image: cimg/node:lts-browsers
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -32,16 +32,17 @@ jobs:
       # Install Chrome according to https://circleci.com/developer/orbs/orb/circleci/browser-tools#usage-install_chrome
       - browser-tools/install-chrome
       - checkout
-      - run: |
-          java --version
-          google-chrome --version
+      - run: google-chrome --version
 
-      # Download and cache dependencies
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "build.gradle.kts" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
+
+      - restore_cache:
+          keys:
+            - v1-jdk-{{ checksum "jdk.properties" }}
 
       # installed needed native dependency on Linux
       - run: sudo apt update
@@ -66,6 +67,12 @@ jobs:
       - run:
           name: Verify Kson project
           command: ./gradlew check
+
+      - save_cache:
+          paths:
+            - ./gradle/jdk
+            - ./buildSrc/gradle/jdk
+          key: v1-jdk-{{ checksum "jdk.properties" }}
 
     # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
     resource_class: large
