More specific JDK Error Message
Through testing, we learned we wanted more detail to point us in the
direction of addressing our incorrect JDK.

--- a/jdk.properties
+++ b/jdk.properties
@@ -3,7 +3,7 @@
 # to include this JDK in our Gradle wrapper, making this our truly "built-in" JDK for a trivial and robust
 # developer setup
 JDK_VERSION=11.0.22
-BAD_JDK_VERSION_ERROR=ERROR: incorrect JDK active for this build
+BAD_JDK_VERSION_ERROR=ERROR: please consult `Development setup` in readme.md for help.  Found incorrect JDK active for this build
 
 ##
 # Cross-platform download URLs for the version of the JDK we are currently using, used by the
