Auto-insert close quotes in Jetbrains IDEs
Moving toward a more natural/smooth dev experience in our Jetbrains
plugin, we now support auto-inserting close quotes on strings.

To support this, we now parse strings more rigorously, with their quotes
tokenized separately.  This should also pay dividends later, for
instance to help us improve unclosed string errors.

--- a/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
+++ b/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
@@ -31,7 +31,7 @@
                                        implementationClass="org.kson.jetbrains.highlighter.KsonSyntaxHighlighterFactory"/>
         <lang.commenter language="org.kson.jetbrains" implementationClass="org.kson.jetbrains.editor.KsonCommenter"/>
         <lang.braceMatcher language="org.kson.jetbrains" implementationClass="org.kson.jetbrains.editor.KsonPairedBraceMatcher"/>
-
+        <lang.quoteHandler language="org.kson.jetbrains" implementationClass="org.kson.jetbrains.editor.KsonQuoteHandler"/>
         <colorSettingsPage implementation="org.kson.jetbrains.pages.KsonColorSettingsPage"/>
     </extensions>
 </idea-plugin>
