Update brace/bracket token names for clarity
Move to the move precise language of "CURLY_BRACE" for `{}` braces and
"SQUARE_BRACKET" for `[]` brackets.  This makes them easier to quickly
distinguish in the code, and preps us for the planned addition of
"ANGLE_BRACKET" for `<>` to delimit dashed lists

--- a/tooling/jetbrains/src/main/resources/messages/KsonBundle.properties
+++ b/tooling/jetbrains/src/main/resources/messages/KsonBundle.properties
@@ -1,8 +1,8 @@
 kson.name=Kson
 kson.file.fileTypeDescription=Kson language file
 
-kson.syntaxHighlighter.brace=Brace
-kson.syntaxHighlighter.bracket=Bracket
+kson.syntaxHighlighter.curly_brace=Curly Brace
+kson.syntaxHighlighter.square_bracket=Square Bracket
 kson.syntaxHighlighter.colon=Colon
 kson.syntaxHighlighter.comma=Comma
 kson.syntaxHighlighter.comment=Comment
