Add support for delimiting dash lists
Add support for angle-bracket delimiters for dash lists.  These
delimiters are optional everywhere except when nesting a dash list
directly within another dash list.  Sample:

```
a_dash_list:
  - "Item 1"
  - "Item 2"

a_delimited_dash_list: <
  - "the <> delimiters are optional everywhere, EXCEPT:"
  - "except when nesting dash lists:"
  - <
      - "a nested dash list"
      - "another nested elem"
    >
  - "another top-level elem"
>
```

--- a/tooling/jetbrains/src/main/resources/messages/KsonBundle.properties
+++ b/tooling/jetbrains/src/main/resources/messages/KsonBundle.properties
@@ -3,6 +3,7 @@ kson.file.fileTypeDescription=Kson language file
 
 kson.syntaxHighlighter.curly_brace=Curly Brace
 kson.syntaxHighlighter.square_bracket=Square Bracket
+kson.syntaxHighlighter.angle_bracket=Angle Bracket
 kson.syntaxHighlighter.colon=Colon
 kson.syntaxHighlighter.comma=Comma
 kson.syntaxHighlighter.comment=Comment
