--- a/jdk.properties
+++ b/jdk.properties
@@ -2,8 +2,7 @@
 # Declare the desired JDK version for our build.  We use the `me.filippov.gradle.jvm.wrapper` Gradle plugin
 # to include this JDK in our Gradle wrapper, making this our truly "built-in" JDK for a trivial and robust
 # developer setup
-JDK_VERSION=11.0.22
-BAD_JDK_VERSION_ERROR=ERROR: please consult `Development setup` in readme.md for help.  Found incorrect JDK active for this build
+JDK_VERSION=17.0.14
 
 ##
 # Cross-platform download URLs for the version of the JDK we are currently using, used by the
@@ -17,12 +16,14 @@ BAD_JDK_VERSION_ERROR=ERROR: please consult `Development setup` in readme.md for
 #
 # NOTE: these URLs must point to a JDK that matches the declared JDK_VERSION above, else
 #       the BAD_JDK_VERSION_ERROR will be triggered
-# IF THESE URLs CHANGE: `./gradlew wrapper` must be run after any edits for them to take effect
+#
+# IF THESE URLs CHANGE: `./gradlew wrapper` must be run after any edits for them to take effect,
+#   and `./gradlew check` should also be run to ensure the new JDK is loaded and verified
 unixJvmInstallDir=$APP_HOME/gradle/jdk
 winJvmInstallDir=%APP_HOME%\\gradle\\jdk
-macAarch64JvmUrl=https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7.1/OpenJDK11U-jdk_aarch64_mac_hotspot_11.0.22_7.tar.gz
-macX64JvmUrl=https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7/OpenJDK11U-jdk_x64_mac_hotspot_11.0.22_7.tar.gz
-linuxAarch64JvmUrl = https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7/OpenJDK11U-jdk_aarch64_linux_hotspot_11.0.22_7.tar.gz
-linuxX64JvmUrl = https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7/OpenJDK11U-jdk_x64_linux_hotspot_11.0.22_7.tar.gz
-windowsX64JvmUrl = https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.22%2B7/OpenJDK11U-jdk_x64_windows_hotspot_11.0.22_7.zip
+macAarch64JvmUrl=https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.14%2B7/OpenJDK17U-jdk_aarch64_mac_hotspot_17.0.14_7.tar.gz
+macX64JvmUrl=https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.14%2B7/OpenJDK17U-jdk_x64_mac_hotspot_17.0.14_7.tar.gz
+linuxAarch64JvmUrl = https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.14%2B7/OpenJDK17U-jdk_aarch64_linux_hotspot_17.0.14_7.tar.gz
+linuxX64JvmUrl = https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.14%2B7/OpenJDK17U-jdk_x64_linux_hotspot_17.0.14_7.tar.gz
+windowsX64JvmUrl = https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.14%2B7/OpenJDK17U-jdk_x64_windows_hotspot_17.0.14_7.zip
 
