Upgrade IntelliJ Platform compatibility
Bring our IntelliJ Platform compatibility up to more recent versions.

Also consult the latest https://github.com/JetBrains/intellij-platform-plugin-template
as part of this upgrade and  pull some recommended changes and best
practices

--- a/tooling/jetbrains/gradle.properties
+++ b/tooling/jetbrains/gradle.properties
@@ -7,13 +7,27 @@ pluginName = Kson
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
-# IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
+# See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
+# for insight into build numbers and IntelliJ Platform versions.
+pluginSinceBuild = 223.8
+pluginUntilBuild = 233.*
+
+# IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html
 platformType = IC
-platformVersion = 2021.3.1
+platformVersion = 2022.3.3
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
-# Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
+# Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
 platformPlugins =
+# Example: platformBundledPlugins = com.intellij.java
+platformBundledPlugins =
 
-# Java language level used to compile sources and to generate the files for - Java 11 is required since 2020.3
-javaVersion = 11
+# Java language level used to compile sources and to generate the files
+# Using Java 17 is required since 2022.3
+javaVersion = 17
+
+# Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
+org.gradle.configuration-cache = true
+
+# Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
+org.gradle.caching = true
