--- a/tooling/jetbrains/gradle.properties
+++ b/tooling/jetbrains/gradle.properties
@@ -17,10 +17,7 @@ platformType = IC
 platformVersion = 2022.3.3
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
-# Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
-platformPlugins =
-# Example: platformBundledPlugins = com.intellij.java
-platformBundledPlugins =
+platformPlugins = org.jetbrains.kotlin
 
 # Java language level used to compile sources and to generate the files
 # Using Java 17 is required since 2022.3
