Always use `console=verbose` for Gradle
With `console=verbose`, Gradle output always lists the full set of tasks
that are part of a particular invocation, including UP-TO-DATE and
NO-SOURCE tasks.  This output makes understanding what's going on in
each build much easier since it never hides any tasks in a run.

This change is part of trying to prevent build bugs like the one
fixed in 8b459c8700424c9de445d20a177fb8a2d49a4742 / 41704169252d20d77af228081f6272fe57ff9356
from ever happening again.  The root cause there was Gradle hiding
NO-SOURCE tasks in its output, making everything seems green when in
fact the tests that would detect the problem were accidentally and
quietly missing.

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,5 @@ org.gradle.jvmargs=-Xmx2048m
 # the code that demands it, but there is currently a bug in how the warning detects this
 # setting (https://github.com/JetBrains/intellij-platform-gradle-plugin/issues/1789)
 kotlin.stdlib.default.dependency = true
+
+org.gradle.console=verbose
