Kson formatter integration for JetBrains plugin
Integrate `Kson.format(...)` formatting into our JerBrains plugin by
creating `KsonExternalFormatter`, a formatting service which delegates
file formatting to `Kson.format(...)`

As we expand formatting capabilities of `Kson.format(...)`, we will
build out this support too, including adding a code style configuration
page into the IDE

--- a/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
+++ b/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
@@ -32,5 +32,6 @@
         <lang.braceMatcher language="org.kson.jetbrains" implementationClass="org.kson.jetbrains.editor.KsonPairedBraceMatcher"/>
         <lang.quoteHandler language="org.kson.jetbrains" implementationClass="org.kson.jetbrains.editor.KsonQuoteHandler"/>
         <colorSettingsPage implementation="org.kson.jetbrains.pages.KsonColorSettingsPage"/>
+        <formattingService implementation="org.kson.jetbrains.formatter.KsonExternalFormatter"/>
     </extensions>
 </idea-plugin>
