Format brace pairs on Enter
An important first step towards setting the indent on a newline
correctly when a user presses Enter in the IDE: we define an
`EnterHandlerDelegate` and implement format-on-enter for matched braced
pairs, `{}`, `[]`, `<>`.  So now for instance `{<caret>}` becomes:

```
{
<indent><caret>
}
```

This also cleans up trailing whitespace up to the next line if there is
any, so for instance improperly formatted close braces like this:
```
[<caret>
      ]
```
get formatted and become:
```
[
<indent><caret>
]
```

--- a/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
+++ b/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
@@ -34,5 +34,6 @@
         <langCodeStyleSettingsProvider implementation="org.kson.jetbrains.config.KsonLanguageCodeStyleSettingsProvider"/>
         <colorSettingsPage implementation="org.kson.jetbrains.pages.KsonColorSettingsPage"/>
         <formattingService implementation="org.kson.jetbrains.formatter.KsonExternalFormatter"/>
+        <enterHandlerDelegate implementation="org.kson.jetbrains.editor.KsonEnterHandlerDelegate"/>
     </extensions>
 </idea-plugin>
