Add code folding support for Kson files
Implemented a `KsonFoldingBuilder` to enable code folding for lists,
objects, and embedded blocks in Kson files.

--- a/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
+++ b/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
@@ -43,5 +43,7 @@
         <colorSettingsPage implementation="org.kson.jetbrains.pages.KsonColorSettingsPage"/>
         <formattingService implementation="org.kson.jetbrains.formatter.KsonExternalFormatter"/>
         <enterHandlerDelegate implementation="org.kson.jetbrains.editor.KsonEnterHandlerDelegate"/>
+        <lang.foldingBuilder language="kson"
+                             implementationClass="org.kson.jetbrains.folding.KsonFoldingBuilder"/>
     </extensions>
 </idea-plugin>
