Introduce the "end-dot"
Rather than use a semicolon `;` as the plainObject/dashList terminator
in our grammar, introduce the "end-dot": a tiny terminating dot `.` that
does the work of explicitly terminating our collections when needed,
while adding only minimal visual noise:

```
outer_1:
  nested_1: 1
  nested_2: 2
  .
outer_2: val
```

--- a/tooling/jetbrains/src/main/resources/messages/KsonBundle.properties
+++ b/tooling/jetbrains/src/main/resources/messages/KsonBundle.properties
@@ -7,6 +7,7 @@ kson.syntaxHighlighter.angle_bracket=Angle Bracket
 kson.syntaxHighlighter.colon=Colon
 kson.syntaxHighlighter.comma=Comma
 kson.syntaxHighlighter.comment=Comment
+kson.syntaxHighlighter.end-dot=End-dot
 kson.syntaxHighlighter.delimiter=Delimiter
 kson.syntaxHighlighter.embed_tag=Embed tag
 kson.syntaxHighlighter.identifier=Identifier
