Unify strings, eliminate "identifier" concept
Early on in Kson's design, I had the idea that unquoted strings would
be semantically meaningful, likely references to named objects, hence
the name "identifier" that was used throughout the code.

This concept is now design cruft, so remove the parts of the code that
still imply it, and simplify things around these being simply unquoted
strings.

--- a/tooling/jetbrains/src/main/resources/messages/KsonBundle.properties
+++ b/tooling/jetbrains/src/main/resources/messages/KsonBundle.properties
@@ -10,7 +10,7 @@ kson.syntaxHighlighter.comment=Comment
 kson.syntaxHighlighter.end-dot=End-dot
 kson.syntaxHighlighter.delimiter=Delimiter
 kson.syntaxHighlighter.embed_tag=Embed tag
-kson.syntaxHighlighter.identifier=Identifier
+kson.syntaxHighlighter.unquoted=Unquoted String
 kson.syntaxHighlighter.keyword=Keyword
 kson.syntaxHighlighter.invalid=Invalid
 kson.syntaxHighlighter.number=Number
