--- a/tooling/vs-code/package.json
+++ b/tooling/vs-code/package.json
@@ -13,7 +13,7 @@
     }
   ],
   "version": "0.0.1",
-  "main": "./out/client/node/ksonClientMain.js",
+  "main": "./out/src/client/node/ksonClientMain.js",
   "contributes": {
     "languages": [
       {
@@ -44,22 +44,28 @@
     }
   },
   "engines": {
-    "vscode": "^1.100.0",
+    "vscode": "^1.101.0",
     "node": "^20.18.1"
   },
   "scripts": {
-    "compile": "tsc -b"
+    "compile": "tsc -b",
+    "test": "npm run compile && vscode-test"
   },
   "dependencies": {
     "kson-language-server": "file:../language-server-protocol",
-    "vscode": "^1.1.37",
     "vscode-languageclient": "^9.0.1",
     "vscode-languageserver": "^9.0.1"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.7",
     "@types/node": "20.0.0",
-    "@types/vscode": "1.100.0",
+    "@types/uuid": "^9.0.8",
+    "@types/vscode": "1.101.0",
+    "@vscode/test-cli": "^0.0.11",
+    "@vscode/test-electron": "^2.5.2",
+    "mocha": "^11.7.1",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "uuid": "^9.0.1"
   }
 }
