Fix libncurses5 error in linux native builds
Our linux builds recently started erroring with:

```
Reading package lists... Done
Building dependency tree... Done
Reading state information... Done
E: Unable to locate package libncurses5

Exited with code exit status 100
```

Seems libncurses5 was deprecated and is no longer available in the
repos our build uses.  See [this issue along](https://youtrack.jetbrains.com/issue/KTOR-7909/Contribution-Installation-Instructions-Replace-libncurses5-with-libncurses6-for-Ubuntu-20.04-and-Later)
along with [this pull request providing its fix](https://github.com/ktorio/ktor/pull/4529)
for more color on this.

Note: neither that issue nor the pull request were clear on why we
should move to `libncurses-dev` rather than `libncurses6` so I dug into
it a bit.  It seems `libncurses-dev` is designed to provide a stable
interface to the underlying version of libncurses, currently
pointing to libncurses6. See [the package description here](https://packages.debian.org/sid/libncurses-dev)
So `-dev` does indeed look like the right version for us, and should
protect us from our builds suddenly breaking like this again in the
future

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
 
       # installed needed native dependency on Linux
       - run: sudo apt update
-      - run: sudo apt install libncurses5
+      - run: sudo apt install libncurses-dev
       - run:
           name: Get rid of erroneous git config
           command: |
