--- a/tooling/vs-code/package.json
+++ b/tooling/vs-code/package.json
@@ -14,7 +14,11 @@
   ],
   "publisher": "kson-org",
   "version": "0.0.1",
-  "main": "./out/src/client/node/ksonClientMain.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kson-org/kson"
+  },
+  "main": "./dist/client.js",
   "contributes": {
     "languages": [
       {
@@ -49,13 +53,17 @@
     "node": "^20.18.1"
   },
   "scripts": {
-    "compile": "tsc -b",
-    "test": "npm run compile && vscode-test",
-    "test:vsix": "npm run package && npm run compile && node out/test/runVsixTests.js",
-    "package": "vsce package --no-dependencies"
+    "vscode:prepublish": "npm run package",
+    "package": "npm run check-types && node esbuild.js --production",
+    "package:vsix": "npm run package && vsce package --no-dependencies --out out/vscode-kson-plugin.vsix",
+    "compile": "npm run check-types && node esbuild.js",
+    "compile-tests": "tsc -p ./tsconfig.json",
+    "bundle": "node esbuild.js",
+    "check-types": "tsc --noEmit",
+    "test": "npm run compile-tests && vscode-test",
+    "test:vsix": "npm run package && npm run compile-tests && node out/test/runVsixTests.js"
   },
   "dependencies": {
-
     "kson-language-server": "file:../language-server-protocol",
     "typescript": "^5.5.4",
     "vscode-languageclient": "^9.0.1",
@@ -70,6 +78,7 @@
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
     "@vscode/vsce": "^3.6.0",
+    "esbuild": "^0.25.5",
     "glob": "^11.0.0",
     "mocha": "^11.7.1",
     "tsx": "^4.20.3",
