Move language configuration and grammar
Prepare for bundling. When creating a bundle vsce only bundles the files
that are NOT in the `.vscodeignore`, we must ignore the `src/` folder,
but the plugin needs these files.

--- a/tooling/vs-code/package.json
+++ b/tooling/vs-code/package.json
@@ -29,14 +29,14 @@
           "light": "./assets/kson-icon.png",
           "dark": "./assets/kson-icon.png"
         },
-        "configuration": "./src/config/language-configuration.json"
+        "configuration": "./config/language-configuration.json"
       }
     ],
     "grammars": [
       {
         "language": "kson",
         "scopeName": "source.kson",
-        "path": "./src/config/syntaxes/kson.tmLanguage.json"
+        "path": "./config/kson.tmLanguage.json"
       }
     ],
     "configuration": {
