Fix LSP entrypoint bug
In a refactor I accidentally forgot to update the main entrypoint. This
mistake is hard to make again after we have plugins depending on our
language server.

--- a/tooling/language-server-protocol/package.json
+++ b/tooling/language-server-protocol/package.json
@@ -13,7 +13,7 @@
   "version": "0.0.1",
   "description": "Kson Language Server implementation in TypeScript",
   "type": "module",
-  "main": "./out/ksonServer.js",
+  "main": "./out/startKsonServer.js",
   "scripts": {
     "build": "tsc",
     "test": "mocha 'out/test/**/*.test.js'"
